# shiro

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  flake.nix  install.js  install.sh  lefthook.yml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changeset/: fastembed-integration.md
.github/workflows/: ci.yml  coverage.yml  release-changesets.yml  release.yml
crates/shiro-cli/: AGENTS.md  Cargo.toml
crates/shiro-cli/src/: envelope.rs  main.rs  schema.rs
crates/shiro-cli/src/commands/: add.rs  capabilities.rs  completions.rs  config.rs  doctor.rs  enrich.rs  explain.rs  ingest.rs  init.rs  list.rs  mcp.rs  mod.rs  read.rs  reindex.rs  remove.rs  root.rs  search.rs  status.rs  taxonomy.rs
crates/shiro-cli/tests/: integration.rs  mcp.rs  performance.rs
crates/shiro-core/: AGENTS.md  Cargo.toml
crates/shiro-core/src/: config.rs  enrichment.rs  error.rs  fingerprint.rs  generation.rs  id.rs  ir.rs  lib.rs  lock.rs  manifest.rs  ports.rs  span.rs  taxonomy.rs
crates/shiro-docling/: AGENTS.md  Cargo.toml
crates/shiro-docling/src/: lib.rs  parser.rs  schema.rs  translate.rs
crates/shiro-docling/tests/: comparison.rs  translation_tests.rs
crates/shiro-docling/tests/fixtures/: degraded_scanned.json  empty_document.json  simple_report.json
crates/shiro-embed/: AGENTS.md  Cargo.toml
crates/shiro-embed/src/: flat.rs  http.rs  lib.rs  stub.rs
crates/shiro-fastembed/: Cargo.toml
crates/shiro-fastembed/src/: embedder.rs  lib.rs  reranker.rs
crates/shiro-index/: Cargo.toml
crates/shiro-index/src/: lib.rs
crates/shiro-parse/: Cargo.toml
crates/shiro-parse/src/: lib.rs  markdown.rs  pdf.rs
crates/shiro-sdk/: AGENTS.md  Cargo.toml
crates/shiro-sdk/src/: dsl.rs  engine.rs  executor.rs  fusion.rs  lib.rs  spec.rs
crates/shiro-sdk/src/ops/: add.rs  doctor.rs  enrich.rs  explain.rs  ingest.rs  list.rs  mod.rs  read.rs  reindex.rs  remove.rs  search.rs
crates/shiro-store/: Cargo.toml
crates/shiro-store/src/: lib.rs
docs/: ARCHITECTURE.md  CLI.md  MCP.md
docs/adr/: 001-document-graph-ir.md  002-sqlite-source-of-truth.md  003-flatindex-correctness-baseline.md  004-processing-fingerprints.md  005-generation-based-index-publish.md  006-persist-document-graph.md  007-entrypoint-as-retrieval-primitive.md  008-canonical-retrieval-field-model.md  009-segments-derived-operational-view.md  010-indices-derived-and-rebuildable.md  011-embedding-providers-are-adapters.md  012-canonical-embedding-contract.md  013-ann-must-beat-flatindex.md  014-hybrid-retrieval-contract.md  015-query-routing-before-fusion.md  016-pdf-structured-output-confidence.md  017-processing-identity-separate-from-content-identity.md  018-reprocessing-policy-for-drift.md  019-ingest-idempotent-failure-resume.md  020-every-write-has-provenance.md  021-partition-memory-into-trust-zones.md  022-trust-and-provenance-are-retrieval-features.md  023-agent-generated-writes-require-promotion-rules.md  024-generation-publish-is-uniform-activation-model.md  025-scale-targets-and-resource-budgets.md  026-observability-first-class-architecture.md  027-benchmarking-is-a-release-gate.md  028-official-evaluation-corpora.md  029-configuration-typed-versioned-migrated.md  030-single-binary-product-boundary.md  031-npm-distribution-strategy.md  032-adaptive-retrieval-roadmap-is-phased.md  033-sync-readiness-without-premature-crdt.md  034-managed-forgetting-affects-caches-not-canonical-truth.md  README.md
fixtures/: tiny.md
scripts/: check-capabilities.sh  coverage.sh  publish-crates.sh  tag-release.sh  version-sync.sh
