[workspace]
members = [
  "crates/shiro-core",
  "crates/shiro-store",
  "crates/shiro-index",
  "crates/shiro-parse",
  "crates/shiro-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanurb/shiro"
description = "Local-first PDF/Markdown knowledge engine"

[workspace.dependencies]
# core building blocks
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"
camino = { version = "1", features = ["serde1"] }

# storage + indexing
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"

# CLI + observability
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# testing
proptest = "1"
tempfile = "3"

# internal crates
shiro-core = { path = "crates/shiro-core" }
shiro-store = { path = "crates/shiro-store" }
shiro-index = { path = "crates/shiro-index" }
shiro-parse = { path = "crates/shiro-parse" }