[package]
name = "shiro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "shiro"
path = "src/main.rs"

[dependencies]
shiro-core.workspace = true
shiro-store.workspace = true
shiro-index.workspace = true
shiro-parse.workspace = true
shiro-embed.workspace = true
shiro-sdk.workspace = true
shiro-docling.workspace = true
blake3.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
