[package]
name = "shiro-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
blake3.workspace = true
camino.workspace = true
serde.workspace = true
schemars.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
