[package]
name = "shiro-docling"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Docling-based structured PDF parser adapter for shiro"

[dependencies]
shiro-core.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]
serde_json.workspace = true
shiro-parse.workspace = true