[package]
name = "shiro-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Vector embedding index implementations for shiro"

[dependencies]
shiro-core.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
tracing.workspace = true
ureq.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
