[package]
name = "shiro-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shiro-core.workspace = true
camino.workspace = true
tantivy.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
