[package]
name = "shiro-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shiro-core.workspace = true
blake3.workspace = true
camino.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
