[package]
name = "shiro-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed SDK for the shiro knowledge engine — the single public API surface"

[dependencies]
shiro-core  = { workspace = true }
shiro-store = { workspace = true }
shiro-index = { workspace = true }
shiro-parse = { workspace = true }
shiro-embed = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
schemars   = { workspace = true }
blake3      = { workspace = true }
camino      = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
