[package]
name = "shiro-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiro-core.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true
camino.workspace = true

[dev-dependencies]
tempfile.workspace = true
blake3.workspace = true
