[package]
name = "shiro-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
shiro-core.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true
camino.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
blake3.workspace = true
